fix alignment on overview page

--- a/css/main.css
+++ b/css/main.css
@@ -795,6 +795,9 @@ h2.vd-select-title-fill {
     text-align: left;
     padding: 0 1em 1em 1em;
 }
+.vd-select-item .vd-select-text ul {
+    min-height: 7em;
+}
 .vd-select-item .vd-select-text .vd-button {
     position: absolute;
     top: -75px;
